--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <h2></h2>
-        <img src ="images/me.png" width="800" height="450">
+        <div class="container"> <img src="images/me.png" class="responsive-image" alt="Me"></div>
         <p>Primarily, what made me choose BS Information Technology was my fascination for video games and anything sci-fi that involves technology, and secondarily, I’ve always wanted a remote job where I’ll be able to work wherever, whenever, whatever. I strive to develop and further hone my skills here at the University of San Carlos so hopefully in the future I can attain my dream job which is to get into  Cybersecurity, a job that I have always found intriguing and impactful, especially in this day of age where we are pushing technology to the limit. Almost everything can be and is done digitally. Last but not least, I chose this because of my qualities: well-organized, strategical, and comfortable with repetitive tasks which I think are great, if not, good qualities as an aspiring IT specialist.</p>
        
     </main>
